before installing any dependencies

--- a/Dotty/Info.plist
+++ b/Dotty/Info.plist
@@ -19,6 +19,10 @@
 			<string></string>
 		</dict>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ChiKareGo2.ttf</string>
+	</array>
 	<key>UTImportedTypeDeclarations</key>
 	<array>
 		<dict>
