--- a/src/worker/tsconfig.json
+++ b/src/worker/tsconfig.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["*/**"],
-  "references": [{ "path": "../tsconfig.node.json" }]
+  "references": [{ "path": "../../tsconfig.node.json" }]
 }
