Linux, what u at

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   },
   "engines": {
     "node": ">=20.0.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.35.0"
   }
 }
